--- a/src/components/Animation/ArtWork.css
+++ b/src/components/Animation/ArtWork.css
@@ -439,7 +439,11 @@
     transform: scale(0.7);
 
     @media (max-width: 768px) {
-        margin-left: -50px;
+        margin-left: auto;
+        margin-right: 200%;
+        display: flex;
+        justify-content: center;
+        transform: scale(0.6);
     }
   }
   
@@ -466,8 +470,8 @@
   }
   
   .color-picker-circle {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     cursor: pointer;
@@ -497,5 +501,6 @@
     font-weight: 500;
     margin-bottom: 5px;
     text-align: center;
+    color: var(--text-color);
   }
   
